force-app/main/default/objects/Project__c/fields/Project_Supporter_3__c.field-meta.xml
<CustomField>
    <fullName>Project_Supporter_3__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Please add your name if you are facilitating the lead, supporting the effort and calling on influencers.</description>
    <inlineHelpText>Please add your name if you are facilitating the lead, supporting the effort and calling on influencers.</inlineHelpText>
    <label>Project Supporter 3</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Projects8</relationshipName>
    <type>Lookup</type>
</CustomField>