force-app/main/default/objects/Project__c/fields/Project_Team_Member_Role__c.field-meta.xml
<CustomField>
    <fullName>Project_Team_Member_Role__c</fullName>
    <description>This field is used for the project team&#39;s user role.</description>
    <formula>IF(ISBLANK(TEXT( Owner:User.User_Project_Team_Role__c )),&#39;Showroom Manager&#39;,TEXT( Owner:User.User_Project_Team_Role__c ))</formula>
    <label>Project Team Member Role</label>
    <type>Text</type>
</CustomField>