force-app/main/default/objects/Project__c/fields/Project_Total_Value__c.field-meta.xml
<CustomField>
    <fullName>Project_Total_Value__c</fullName>
    <description>This field will be populated by the Project - Total Value roll-up summary (Project_Total_Value) sum.</description>
    <label>xProject Total Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>