force-app/main/default/objects/Project__c/fields/Project_Type__c.field-meta.xml
<CustomField>
    <fullName>Project_Type__c</fullName>
    <description>Type of property on this project</description>
    <label>Project Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>EDUCATION</fullName>
                <label>Education</label>
            </value>
            <value>
                <fullName>GOVERNMENT/MILITARY</fullName>
                <label>Government/Military</label>
            </value>
            <value>
                <fullName>HEALTHCARE</fullName>
                <label>Healthcare</label>
            </value>
            <value>
                <fullName>HOSPITALITY</fullName>
                <label>Hospitality</label>
            </value>
            <value>
                <fullName>MIXED USE DEV</fullName>
                <label>Mixed Use Dev</label>
            </value>
            <value>
                <fullName>MULTI FAMILY</fullName>
                <label>Multi Family</label>
            </value>
            <value>
                <fullName>OFFICE BUILDING</fullName>
                <label>Office Building</label>
            </value>
            <value>
                <fullName>PRISON</fullName>
                <label>Prison</label>
            </value>
            <value>
                <fullName>RELIGIOUS/CULTURAL FACILITIES</fullName>
                <label>Religious/Cultural Facilities</label>
            </value>
            <value>
                <fullName>RESTAURANT/RETAIL</fullName>
                <label>Restaurant/Retail</label>
            </value>
            <value>
                <fullName>SHIP</fullName>
                <label>Ship</label>
            </value>
            <value>
                <fullName>SINGLE FAMILY</fullName>
                <label>Single Family</label>
            </value>
            <value>
                <fullName>STADIUM/ENTERTAINMENT</fullName>
                <label>Stadium/Entertainment</label>
            </value>
            <value>
                <fullName>Student Housing</fullName>
            </value>
            <value>
                <fullName>Airport</fullName>
            </value>
            <value>
                <fullName>Amusement Park</fullName>
                <isActive>false</isActive>
                <label>AMUSEMENT PARK</label>
            </value>
            <value>
                <fullName>Barracks/Army</fullName>
                <isActive>false</isActive>
                <label>BARRACKS/ARMY</label>
            </value>
            <value>
                <fullName>Buss/Comm Build/Comp</fullName>
                <isActive>false</isActive>
                <label>BUSS/COMM BUILD/COMP</label>
            </value>
            <value>
                <fullName>City/Public Sector</fullName>
                <isActive>false</isActive>
                <label>CITY/PUBLIC SECTOR</label>
            </value>
            <value>
                <fullName>Cultural Facilities</fullName>
                <isActive>false</isActive>
                <label>CULTURAL FACILITIES</label>
            </value>
            <value>
                <fullName>Dept Store/Shopping</fullName>
                <isActive>false</isActive>
                <label>DEPT STORE/SHOPPING</label>
            </value>
            <value>
                <fullName>Government</fullName>
                <isActive>false</isActive>
                <label>GOVERNMENT</label>
            </value>
            <value>
                <fullName>Government Building</fullName>
                <isActive>false</isActive>
                <label>GOVERNMENT BUILDING</label>
            </value>
            <value>
                <fullName>Green Buildings</fullName>
                <isActive>false</isActive>
                <label>GREEN BUILDINGS</label>
            </value>
            <value>
                <fullName>HOSPITAL/MEDICAL CARE</fullName>
                <isActive>false</isActive>
                <label>HOSPITAL/MEDICAL CARE</label>
            </value>
            <value>
                <fullName>Hospitals</fullName>
                <isActive>false</isActive>
                <label>HOSPITALS</label>
            </value>
            <value>
                <fullName>Hotel</fullName>
                <isActive>false</isActive>
                <label>HOTEL</label>
            </value>
            <value>
                <fullName>Hospital/Medical Car</fullName>
                <isActive>false</isActive>
                <label>Hospital/Medical Car</label>
            </value>
            <value>
                <fullName>Hotel / Motel</fullName>
                <isActive>false</isActive>
                <label>Hotel / Motel</label>
            </value>
            <value>
                <fullName>Hotel 4/5 Stars</fullName>
                <isActive>false</isActive>
                <label>Hotel 4/5 Stars</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>