force-app/main/default/objects/Project__c/fields/ReassignProjectTeam__c.field-meta.xml
<CustomField>
    <fullName>ReassignProjectTeam__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The field will be used to reassign the Project Team.</description>
    <inlineHelpText>Only Project Team, (Non Approvers) will be reassigned.</inlineHelpText>
    <label>Reassign Project Team</label>
    <type>Checkbox</type>
</CustomField>