force-app/main/default/objects/Project__c/fields/Remaining_Value__c.field-meta.xml
<CustomField>
    <fullName>Remaining_Value__c</fullName>
    <description>Difference between project value and order value</description>
    <formula>Total_Project_Value__c -  Total_Order_Value__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Remaining Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>