force-app/main/default/objects/Project__c/fields/SAP_Project_ID__c.field-meta.xml
<CustomField>
    <fullName>SAP_Project_ID__c</fullName>
    <externalId>true</externalId>
    <label>SAP Project ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>