force-app/main/default/objects/Project__c/fields/Scale__c.field-meta.xml
<CustomField>
    <fullName>Scale__c</fullName>
    <description>Project scale</description>
    <label>Scale</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>ChainScale__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>6</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>