force-app/main/default/objects/Project__c/fields/Scale_ID__c.field-meta.xml
<CustomField>
    <fullName>Scale_ID__c</fullName>
    <formula>TEXT( Hotel_Group__r.Scale_ID__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Scale ID</label>
    <type>Text</type>
</CustomField>