force-app/main/default/objects/Project__c/fields/Second_Level_Approver__c.field-meta.xml
<CustomField>
    <fullName>Second_Level_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>2nd Level Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Projects2</relationshipName>
    <type>Lookup</type>
</CustomField>