force-app/main/default/objects/Project__c/fields/Site_URL__c.field-meta.xml
<CustomField>
    <fullName>Site_URL__c</fullName>
    <formula>LEFT($Api.Partner_Server_URL_260, FIND( &#39;/services&#39;, $Api.Partner_Server_URL_260))</formula>
    <label>Site URL</label>
    <type>Text</type>
</CustomField>