force-app/main/default/objects/Project__c/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <description>Project source</description>
    <label>Lead Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BUILDCENTRAL</fullName>
            </value>
            <value>
                <fullName>Channel Partner</fullName>
            </value>
            <value>
                <fullName>Event</fullName>
            </value>
            <value>
                <fullName>Existing Customer</fullName>
            </value>
            <value>
                <fullName>Lead</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Personal Network</fullName>
            </value>
            <value>
                <fullName>Prospecting/Campaign</fullName>
            </value>
            <value>
                <fullName>SAP CRM</fullName>
            </value>
            <value>
                <fullName>Initial Load</fullName>
                <isActive>false</isActive>
                <label>Initial Load</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>