force-app/main/default/objects/Project__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <description>Project start date</description>
    <label>Plumbing Start Date</label>
    <type>Date</type>
</CustomField>