force-app/main/default/objects/Project__c/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <description>Project address&#39; state</description>
    <label>State/Province</label>
    <length>2</length>
    <type>Text</type>
</CustomField>