force-app/main/default/objects/Project__c/fields/Third_Level_Approver__c.field-meta.xml
<CustomField>
    <fullName>Third_Level_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>3rd Level Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Projects4</relationshipName>
    <type>Lookup</type>
</CustomField>