force-app/main/default/objects/Project__c/fields/Total_Order_Value__c.field-meta.xml
<CustomField>
    <fullName>Total_Order_Value__c</fullName>
    <description>This will auto populate as soon order comes in the system</description>
    <label>Total Order Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>