force-app/main/default/objects/Project__c/fields/Total_Project_Value__c.field-meta.xml
<CustomField>
    <fullName>Total_Project_Value__c</fullName>
    <description>This is auto populated based on MQ or FQ - this is when quote is approved and send over to Agency and team. Before that Budgetary quote will be generated and will remain in Salesforce to be distributed</description>
    <label>Total Project Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>