force-app/main/default/objects/Project__c/fields/Unit_Type__c.field-meta.xml
<CustomField>
    <fullName>Unit_Type__c</fullName>
    <label>Unit Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Apartments</fullName>
            </value>
            <value>
                <fullName>Beds</fullName>
            </value>
            <value>
                <fullName>Cells</fullName>
            </value>
            <value>
                <fullName>Condo</fullName>
            </value>
            <value>
                <fullName>Home</fullName>
            </value>
            <value>
                <fullName>Office</fullName>
            </value>
            <value>
                <fullName>Restroom</fullName>
            </value>
            <value>
                <fullName>Rooms</fullName>
            </value>
            <value>
                <fullName>Single Family Dwelling</fullName>
            </value>
            <value>
                <fullName>Units</fullName>
            </value>
            <value>
                <fullName>Dwelling</fullName>
            </value>
            <value>
                <fullName>TBD</fullName>
                <isActive>false</isActive>
                <label>TBD</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>