force-app/main/default/objects/Project__c/validationRules/Agency_Profile_user_cant_change_owner.validationRule-meta.xml
<ValidationRule>
    <fullName>Agency_Profile_user_cant_change_owner</fullName>
    <active>true</active>
    <description>System should allow users to update owner field except users with Agency profile.</description>
    <errorConditionFormula>AND( LOWER($Profile.Name) = &quot;agency&quot;, ISCHANGED( OwnerId ) )</errorConditionFormula>
    <errorMessage>You cannot change the owner of the project. Please contact the administrator.</errorMessage>
</ValidationRule>