force-app/main/default/objects/Project__c/validationRules/Hotel_Group_Req_When_Type_is_Hospitality.validationRule-meta.xml
<ValidationRule>
    <fullName>Hotel_Group_Req_When_Type_is_Hospitality</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
				ISPICKVAL(Project_Type__c, &quot;Hospitality&quot;),
				ISBLANK( Hotel_Group__c )
)</errorConditionFormula>
    <errorDisplayField>HotelGroup__c</errorDisplayField>
    <errorMessage>Hotel Group is required when Project Type is Hospitality</errorMessage>
</ValidationRule>