force-app/main/default/objects/Project__c/validationRules/Project_Length_shouldnot_be_more_than_35.validationRule-meta.xml
<ValidationRule>
    <fullName>Project_Length_shouldnot_be_more_than_35</fullName>
    <active>true</active>
    <errorConditionFormula>LEN(Name) &gt; 35</errorConditionFormula>
    <errorDisplayField>Name</errorDisplayField>
    <errorMessage>Project Name should be less or equal to 35 characters.</errorMessage>
</ValidationRule>