force-app/main/default/objects/Project__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Total_Project_Value__c</columns>
    <columns>Project_Region__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>