force-app/main/default/objects/Project__c/listViews/My_Projects.listView-meta.xml
<ListView>
    <fullName>My_Projects</fullName>
    <columns>NAME</columns>
    <columns>Brand__c</columns>
    <columns>Project_Region__c</columns>
    <columns>Project_Type__c</columns>
    <columns>Construction_Type__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Mine</filterScope>
    <label>My Projects</label>
</ListView>