force-app/main/default/objects/Project__c/listViews/Projects_Created_Today.listView-meta.xml
<ListView>
    <fullName>Projects_Created_Today</fullName>
    <columns>NAME</columns>
    <columns>Project_Owner__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <filters>
        <field>Project_Region__c</field>
        <operation>equals</operation>
        <value>Southcentral</value>
    </filters>
    <label>Projects Created Today</label>
</ListView>